--- a/css/style.css
+++ b/css/style.css
@@ -73,12 +73,13 @@ a {
     color: var(--main-bg-color)
 }
 
+
 /****** Nav ******/
-nav {
+.nav {
     display: flex;
     justify-content:space-between;
     align-items: flex-start;
-    width: 1440px;    
+    width: 100%;    
     height: 79px;
     margin-top: Opx;
     padding-top: 0px;
@@ -140,8 +141,7 @@ nav {
 .search-form {
     width: 377px;
     height: 49px;
-    border: solid 1px, #F2F2F2;
-    border-radius: 15px;
+    
     display: flex;
     align-items: center;
 }
@@ -179,7 +179,7 @@ nav {
     font-size: 18px;
     color: white;
     font-weight: bold;
-
+    
 }
 
 .city-input {
@@ -200,8 +200,14 @@ nav {
     gap: 15px;    
 }
 
+.btns-container {
+    display: flex;
+    gap: 15px;
+}
+
 .filters-container span {
     display: flex;
+    
 }
 
 .filter-btn {
@@ -213,9 +219,8 @@ nav {
     font-size: 17px;
     padding: 4px 19px 4px 18px;
     gap: 10px;
-    font-size: 17px;
+    background-color: white;
     font-weight: bold;
-    background: white;
 }
 
 .filter-btn:hover {
@@ -401,27 +406,30 @@ nav {
     flex-direction: column;
     padding: 30px;
     gap: 30px;
+    box-sizing: border-box;
 }
 
 .activites-cards {
     display: flex;
     justify-content: space-between;
-    width: 1280px;
+    width: 100%;
     height: 439px;
     gap: 30px;
+    box-sizing: border-box;
 }
 
 .activite-card {
     display: flex;
     flex-direction: column;
+    flex: 1;
     border-radius: 20px;
     box-shadow: 0px 3px 15px 0px #0000001A;
-
+    box-sizing: border-box;
 }
 
 .activite-card img {
     object-fit: cover;
-    width: 297.5px;
+    width: 100%;
     height: 380px;
     border-radius: 20px 20px 0px 0px;
 }
@@ -473,17 +481,25 @@ nav {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+    
+
     .hebergements-and-populaires {
+        display: flex;
         flex-direction: column;
+        height: auto;
     }
 
     .hebergements {
         width: 100%;
+        padding: 30px;
+        gap: 30px;
     }
 
     .populaires {
         width: 100%;
         margin-top: 50px;
+        padding: 30px;
+        gap: 20px;
     }
 
     .populaires-cards {
@@ -503,9 +519,221 @@ nav {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
+    .activites {
+        margin-top: 35px;
+        display: flex;
+        height: 390px;
+    }
+    .activites-cards {
+        display: flex;
+        justify-content: space-around;
+    }
+
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-    /* ... */
+
+    .nav {
+        width: 100%;
+        height: 115px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 30px;
+        background-color: white;
+    }
+
+    .nav-logo {
+        display: flex;
+        
+    }
+
+    .nav-menu {
+        width: 100%;
+        display: flex;
+        gap: 0px;
+
+    }
+
+    .nav-menu li {
+        border-bottom: transparent 2px #0065FC;
+        width: 50%;
+        justify-content: center;
+        padding-bottom: 15px;
+    }
+
+    .nav-menu li:hover {
+        border-top: none;
+    }
+
+    .li-hebergements:hover,
+    .li-hebergements.active {
+        border-bottom: solid 2px #0065FC;
+    }
+
+    .li-activites:hover {
+        border-bottom: solid 2px #0065FC;
+    }
+    .nav-menu li a {
+        padding: 0px;
+    }    
+
+    .main-container {        
+        display: flex;
+        flex-direction: column;
+        height: auto;
+    }
+
+    .title-form {
+        display: flex;
+        flex-direction: column;
+        padding: 0px 20px;
+        gap: 35px;
+        width: 100%;
+        height: auto;
+        box-sizing: border-box;
+        background-color: white;
+    }
+
+    .search-form {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .filters-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        height: auto;
+
+    }    
+
+    .filters-title {
+        display: flex;    
+    }
+
+    .btns-container {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 161px;
+        gap: 10px;
+    }
+
+    .filter-btn {
+        flex: 0 0 48%; /* Chaque bouton prend ~48% pour laisser de l'espace avec gap */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+        box-sizing: border-box;
+        height: 50px;
+    }
+
+    .total-disponibility {
+        position: relative;
+        bottom: 0px;
+        display: flex;
+        width: auto;
+        gap: 10px;
+    }
+
+    .hebergements-and-populaires {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        box-sizing: border-box;        
+    }
+
+    .populaires {
+        width: 100%;
+        box-sizing: border-box;
+        display: flex;
+        margin-top: 0px;
+        flex-direction: column;
+        order: 1;
+    }
+
+    .populaires-cards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card img {
+        height: 146px;
+    }
+
+    .card {
+        width: 335px;
+        height: 146px;
+    }
+    .hebergements {
+        flex-direction: column;
+        width: 100%;
+        order: 2;
+        background-color: white;
+    }
+
+    .hebergements-cards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hebergement-card {
+        width: auto;
+    }
+
+    .hebergement-card-img {
+        width: 335px;
+        height: 124px;
+    }
+
+    .activites {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+    }
+
+    .activites-cards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: auto;
+        box-sizing: border-box;
+    }
+
+    .activite-card {
+        width: auto;
+
+    }
+
+    .activite-card a {
+        
+    }
+
+    .activite-card img {
+        width: 315px;
+        height: 141px;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        padding: 30px;
+        background: #F2F2F2;
+        box-sizing: border-box;
+        
+    }
 }
