--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ body {
     flex-direction: column;
     width: 100%;
     max-width: 1440px;
+    height: 100%;
     padding: 0 50px;
     box-sizing: border-box;
 }
@@ -183,9 +184,10 @@ a {
 .search-form {
     width: 377px;
     height: 49px;
-    
     display: flex;
     align-items: center;
+    border: solid 1px #F2F2F2;
+    border-radius: 15px;
 }
 
 .localisation-img {
@@ -209,6 +211,7 @@ a {
     font-size: 18px;
     font-weight: bold;
     width: calc(377px - 50px - 132px);
+    border-top: solid ;
 }
 
 .search-btn {
@@ -233,6 +236,9 @@ a {
     outline: none;
 }
 
+.filters-title {
+    font-weight: bold;
+}
 
 .filters-container {
     display: flex;
@@ -323,7 +329,7 @@ a {
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
-    height: 614px;
+    height: 100%;
     gap: 40px;
     padding-top: 35px;
 }
@@ -359,7 +365,7 @@ a {
 
 .hebergement-card {
     width: 250.33px;
-    height: 207.25px;
+    height: 100%;
     border-radius: 20px;
     background-color: white;
 }
@@ -379,6 +385,7 @@ a {
     justify-content: space-between;
     padding: 0px 15px;
     gap: 8px;
+    padding-bottom: 15px;
     
 }
 
@@ -409,6 +416,7 @@ a {
 
 .populaires-cards .card {
     display: flex;
+    width: 100%;
     margin-top: 33px;
 }
 
@@ -447,16 +455,22 @@ a {
     margin-top: 35px;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    width: 100%;
     padding: 30px;
     gap: 30px;
     box-sizing: border-box;
 }
 
+.activites-title {
+    font-weight: 700;
+    font-size: 22px;
+}
 .activites-cards {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 439px;
+    height: 100%;
     gap: 30px;
     box-sizing: border-box;
 }
@@ -497,7 +511,7 @@ a {
 }
 
 .footer-menu-container {
-    width: 446px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -566,7 +580,7 @@ a {
     .activites {
         margin-top: 35px;
         display: flex;
-        height: 390px;
+        height: 100%;
     }
     .activites-cards {
         display: flex;
@@ -577,6 +591,10 @@ a {
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
+
+    .main-container {
+        padding: 0px;
+    }
 
     .nav {
         width: 100%;
@@ -601,20 +619,18 @@ a {
     }
 
     .nav-menu li {
+        border-top: none;
         border-bottom: transparent 2px #0065FC;
         width: 50%;
         justify-content: center;
         padding-bottom: 15px;
     }
 
-    .nav-menu li:hover {
-        border-top: none;
+    .nav-menu li:hover {    
+        border-top: none;    
         border-bottom: solid 2px #0065FC;
     }  
 
-    .nav-menu li:hover {
-        
-    }
     .nav-menu li a {
         padding: 0px;
     }    
@@ -631,7 +647,7 @@ a {
         padding: 0px 20px;
         gap: 35px;
         width: 100%;
-        height: auto;
+        height: 100%;
         box-sizing: border-box;
         background-color: white;
     }
@@ -644,14 +660,15 @@ a {
     .search-form {
         width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
+        box-sizing: border-box;
     }
 
     .search-btn {
         font-size: 0px;
         width: auto;
-        height: 50px;
-   
+        height: 50px;  
+        border-radius: 15px;    
     }
 
     .search-img {
@@ -674,7 +691,7 @@ a {
     .btns-container {
         display: flex;
         flex-wrap: wrap;
-        width: 100%;
+        width: calc(50%-5px);
         height: 100%;
         gap: 10px;
         row-gap: 20px;
@@ -685,6 +702,7 @@ a {
         display: flex;
         justify-content: center;
         align-items: center;
+        min-width: 175px;
         box-sizing: border-box;
         margin: 0px;
         height: 50px;
@@ -694,7 +712,8 @@ a {
         position: relative;
         bottom: 0px;
         display: flex;
-        width: auto;
+        width: 100%;
+        height: 100%;
         gap: 10px;
     }
 
@@ -711,36 +730,38 @@ a {
         box-sizing: border-box;
         display: flex;
         margin-top: 0px;
+        padding: 30px 20px 30px 20px;
         flex-direction: column;
         order: 1;
+        background-color: whi;
     }
 
     .populaires-cards {
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: Opx;
     }
 
     .populaires-cards a {
         width: 100%;
         display: flex;
         justify-content: center;
+        padding: 0px;
     }
 
     .card img {
         height: 146px;
     }
 
-    .card {
-        width: 335px;
-        height: 146px;
-    }
+   /** Hebergements **/
 
     .hebergements {
         flex-direction: column;
-        width: 100%;
+        width: auto;
         order: 2;
-        background-color: white;
+        background-color: white !important;
+        padding: 20px;
     }
 
     .hebergements-cards {
@@ -750,12 +771,11 @@ a {
     }
 
     .hebergement-card {
-        width: auto;
+        width: 100%;        
     }
 
     .hebergement-card-img {
-        width: 335px;
-        height: 124px;
+        width: 100%;
     }
 
     .activites {
@@ -764,24 +784,37 @@ a {
         display: flex;
         flex-direction: column;
         box-sizing: border-box;
+        margin: 0px;
+        padding: 30px;
+       
     }
 
     .activites-cards {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         width: 100%;
-        height: auto;
+        height: 100%;
         box-sizing: border-box;
+        padding: 30px;
+        gap: 15px;
+    }
+
+    .activite-card a {
+        display: block;
+        width: 100%;  
     }
 
     .activite-card {
-        width: auto;
-        justify-content: cen;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .activite-card img {
-        width: 315px;
+        width: 100%;
         height: 141px;
     }
 
@@ -796,6 +829,15 @@ a {
     }
 
     .footer-menu-container {
-        width: auto;
+        display: flex;
+        justify-content: space-between;
+        width: 100;
+        padding: 15px;
     }
+
+    .footer-menu {
+        display: flex;
+        width: 100%;
+    }
+
 }
