--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,15 @@ html, body {
 }
 */
 
-
-
-html, body {
-    overflow-x: hidden;
-  }
+body {
+    display: flex;
+    flex-direction: column;/*** Je remplace justify-content: center; et ajoute flex-direction et align-items pour permettre a la nav d'être centrée horizontalement et non côte à côte du main-container. Ainsi la nav prend 1440px sans le padding imposé par main-container ***/
+    align-items: center;
+    max-width: 1440px;
+    min-width: 335px;
+    margin: 0 auto;
+    gap: 30px
+}
 
 .flex-child {
   min-width: 0;
@@ -58,14 +62,6 @@ html {
 
 .fa-solid {
     color: var(--main-color);
-}
-
-body {
-    display: flex;
-    flex-direction: column;/*** Je remplace justify-content: center; et ajoute flex-direction et align-items pour permettre a la nav d'être centrée horizontalement et non côte à côte du main-container. Ainsi la nav prend 1440px sans le padding imposé par main-container ***/
-    align-items: center;
-    max-width: 1440px;
-    min-width: 335px;
 }
 
 .main-container {
@@ -238,15 +234,16 @@ a {
 }
 
 .filters-title {
+    font-size: 18px;
     font-weight: bold;
 }
 
 .filters-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    width: 758px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
     gap: 15px;    
 }
 
@@ -274,14 +271,6 @@ a {
 }
 
 .filter-btn:hover {
-    display: flex;
-    align-items: center;
-    height: 50px;
-    border-radius: 25px;
-    border: solid 2px #D9D9D9;
-    font-size: 17px;
-    padding: 4px 19px 4px 18px;
-    gap: 10px;
     background-color: #DEEBFF;
 }
 
@@ -357,6 +346,10 @@ a {
    align-items: center;
 }
 
+.hebergements-cards a {
+    width: 100%;
+}
+
 .hebergements-cards {
     display: flex;
     justify-content: space-between;  
@@ -365,7 +358,7 @@ a {
 }
 
 .hebergement-card {
-    width: 250.33px;
+    width: 100%;
     height: 100%;
     border-radius: 20px;
     background-color: white;
@@ -476,10 +469,16 @@ a {
     box-sizing: border-box;
 }
 
+.activites-cards a {
+    display: block;
+    width: 100%;
+}
+
 .activite-card {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    width: 100%;
+    height: 100%;
     border-radius: 20px;
     box-shadow: 0px 3px 15px 0px #0000001A;
     box-sizing: border-box;
@@ -540,6 +539,11 @@ a {
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
     
+    .filters-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
     .hebergements-and-populaires {
         display: flex;
@@ -555,8 +559,6 @@ a {
 
     .populaires {
         width: 100%;
-        margin-top: 50px;
-        padding: 30px;
         gap: 20px;
     }
 
@@ -651,6 +653,7 @@ a {
         height: 100%;
         box-sizing: border-box;
         background-color: white;
+        margin-bottom: 35px;
     }
 
     .title {
@@ -723,25 +726,37 @@ a {
         flex-direction: column;
         width: 100%;
         height: auto;
-        box-sizing: border-box;        
+        box-sizing: border-box;  
+        gap: 15px;
+        border-radius: 0px;
+        padding: 0px;
     }
 
-    .populaires {
+    .hebergements-and-populaires .populaires {
         width: 100%;
         box-sizing: border-box;
         display: flex;
-        margin-top: 0px;
-        padding: 30px 20px 30px 20px;
+        margin-top: 0px;      
         flex-direction: column;
         order: 1;
-        background-color: whi;
+        background-color: #F2F2F2;
+        padding: 30px 20px 30px 20px;
+        gap: 15px;
+        border-radius: 0px;
     }
+
+    
 
     .populaires-cards {
         display: flex;
         flex-direction: column;
         align-items: center;
         padding: Opx;
+        gap: 15px;
+    }
+
+    .populaires-cards .card {
+        margin: 0px;
     }
 
     .populaires-cards a {
@@ -757,22 +772,26 @@ a {
 
    /** Hebergements **/
 
-    .hebergements {
+    .hebergements-and-populaires .hebergements {
         flex-direction: column;
         width: auto;
         order: 2;
-        background-color: white !important;
+        background-color: white;
         padding: 20px;
+        border-radius: 0px;
+        gap: 15px;
     }
 
     .hebergements-cards {
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 15px;
     }
 
     .hebergement-card {
-        width: 100%;        
+        width: 100%;  
+        box-shadow: 0px 3px 15px 0px #0000001A;      
     }
 
     .hebergement-card-img {
@@ -788,8 +807,8 @@ a {
         margin: 0px;
         padding: 30px;
        
-    }
-
+    } 
+    
     .activites-cards {
         display: flex;
         flex-direction: column;
@@ -798,7 +817,7 @@ a {
         width: 100%;
         height: 100%;
         box-sizing: border-box;
-        padding: 30px;
+        padding-bottom: 30px;
         gap: 15px;
     }
 
@@ -811,7 +830,6 @@ a {
         width: 100%;
         display: flex;
         justify-content: center;
-        align-items: center;
     }
 
     .activite-card img {
@@ -825,15 +843,18 @@ a {
         width: 100%;
         height: auto;
         padding: 30px;
+        gap: 50px;
         background: #F2F2F2;
-        box-sizing: border-box;        
+        box-sizing: border-box;
+        margin-top: 0px;        
     }
 
     .footer-menu-container {
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         width: 100;
-        padding: 15px;
+        padding: 0px;
     }
 
     .footer-menu {
