--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@
 
 /****** Debug ******/
 
-/* Ajoute une bordure temporaire à tous les éléments pour debug
+Ajoute une bordure temporaire à tous les éléments pour debug
 * {
-    outline: 1px solid red;
+    
 }
-*/
+
 
 /* Assurer le bon calcul des tailles
 * {
@@ -23,11 +23,11 @@ img {
 }
 */
 
-/*  Empêcher le débordement horizontal
+Empêcher le débordement horizontal
 html, body {
   overflow-x: hidden;
 }
-*/
+
 
 body {
     display: flex;
@@ -42,7 +42,6 @@ body {
 .flex-child {
   min-width: 0;
 }
-*/
 
 html {
     scroll-behavior: smooth;
@@ -121,8 +120,6 @@ a {
     align-items: flex-start;
     width: 100%;    
     height: 79px;
-    margin-top: Opx;
-    padding-top: 0px;
 }
 
 .nav-logo {
@@ -605,7 +602,6 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-bottom: 30px;
         background-color: white;
     }
 
@@ -618,7 +614,7 @@ a {
         width: 100%;
         display: flex;
         gap: 0px;
-
+        padding: 0;
     }
 
     .nav-menu li {
@@ -695,7 +691,6 @@ a {
     .btns-container {
         display: flex;
         flex-wrap: wrap;
-        width: calc(50%-5px);
         height: 100%;
         gap: 10px;
         row-gap: 20px;
@@ -706,6 +701,7 @@ a {
         display: flex;
         justify-content: center;
         align-items: center;
+        width: calc(50% - 5px);
         min-width: 175px;
         box-sizing: border-box;
         margin: 0px;
@@ -743,15 +739,12 @@ a {
         padding: 30px 20px 30px 20px;
         gap: 15px;
         border-radius: 0px;
-    }
-
-    
+    }    
 
     .populaires-cards {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: Opx;
         gap: 15px;
     }
 
@@ -853,13 +846,10 @@ a {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 100;
+        width: 100%;
         padding: 0px;
     }
 
-    .footer-menu {
-        display: flex;
-        width: 100%;
-    }
+    
 
 }
